# lexgrid

./: .dockerignore  .env.example  .gitignore  .keep  .pipeline_test_input.txt  .pre-commit-config.yaml  Dockerfile  ESTEIRA_DESENVOLVIMENTO.md  README.md  __init__.py  abac.py  ai-validation.yml  ai_audit.py  ai_baseline.json  ai_code_guard.py  ai_cost_tracker.py  ai_firewall.py  ai_risk_matrix.py  ai_trace.py  backup_scheduler.py  behavior_analysis.py  chain_of_custody.py  checksum_validator.py  ci.yml  classifier.py  cnae_mapper.py  cnpj.py  cnpj_enrichment_service.py  cnpj_response.py  company_profile.py  compliance.yml  constants.py  correlation.py  dependency_graph.py  diagnostics.py  docker-compose.yml  docker_hardening.py  docker_manager.py  encryption_manager.py  evidence_collector.py  (+70 more)
.github/: .keep  CODEOWNERS  CODEOWNERS.md  SECURITY_REVIEW_PROMPT.md  dependabot.yml  pull_request_template.md  test_ai_governance.py  test_lgpd_rules.py
Docs/: ADR_001_COGNITIVE_ENRICHMENT_ARCHITECTURE.md  MASTER_EXECUTION_PLAN.md  SPRINT_01_FOUNDATION_DETAILED.md  SPRINT_02_CNPJ_INTELLIGENCE_DETAILED.md  SPRINT_03_OPPORTUNITY_ENGINE_DETAILED.md  SaaS_CONFIGURATION_MANUAL.md  VOLUME_01_EXECUTIVE_PRODUCT_ARCHITECTURE.md  VOLUME_02_CORE_PLATFORM_ARCHITECTURE.md  VOLUME_03_OPPORTUNITY_INTELLIGENCE_ENGINE.md  VOLUME_04_KNOWLEDGE_PLATFORM.md  VOLUME_05_RAG_CAG_RX.md  VOLUME_06_JUDGE_ENGINE.md  VOLUME_07_OSINT_PLATFORM.md  VOLUME_08_AGENTS_ARCHITECTURE.md  VOLUME_09_DATA_ARCHITECTURE.md  VOLUME_10_SECURITY_GOVERNANCE.md  VOLUME_11_TESTING_VALIDATION.md  (+1 more)
backend/: diagnostico.py  (+14 more)
(+84 files in other folders)
